# clinical-trial-matching

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  WORKFLOW.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: config.py  main.py  time_utils.py
app/api/: dependencies.py  errors.py  openapi.py  schemas.py  state.py
app/api/routes/: patients.py  (+1 more)
app/db/: session.py
app/extraction/: abbreviation_resolver.py  constants.py  criteria_classifier.py  entity_ruler.py  negation_resolver.py  patterns.py  pipeline.py  quantitative_parser.py  section_splitter.py  types.py
app/fhir/: criterion_projection.py  mapper.py  models.py
app/ingestion/: ctgov_client.py  hasher.py  service.py
app/matching/: __init__.py  gap_report.py  review_items.py  service.py  simulation.py
app/models/: database.py
app/reporting/: coverage_dashboard.py
app/scripts/: curated_corpus_report.py  seed.py  seed_demo.py  therapy_terminology_gap_report.py
data/dictionaries/: onc_abbreviations.jsonl
data/patterns/: biomarkers.jsonl  diseases.jsonl  drugs.jsonl  lab_tests.jsonl  procedures.jsonl  scales.jsonl
frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/scripts/: container-start.sh  export_openapi.py
harness/: governors.yaml  manifest.yaml  prompt-firewall.yaml  roster.yaml  tool-policy.yaml
scripts/: container-start-backend.sh  dev.sh  validate_harness.sh
tests/: conftest.py  test_health.py  test_models.py
(+125 files in other folders)
